--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,14 @@ apply plugin: 'java'
 repositories {
     mavenLocal()
     mavenCentral()
+
+}
+
+dependencies {
+    compile 'com.jfoenix:jfoenix:8.0.7' // Java 8
+    compile 'de.jensd:fontawesomefx-commons:8.15'
+    compile 'de.jensd:fontawesomefx-icons525:3.0.0-4'
+    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-5'
 }
 
 apply plugin: 'javafx-gradle-plugin'
@@ -25,3 +33,4 @@ jfx {
     // minimal requirement for jfxNative-task
     vendor = 'Stock Crunch'
 }
+
