--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
+    compile group: 'joda-time', name: 'joda-time', version: '2.10'
 }
 
 apply plugin: 'javafx-gradle-plugin'
