--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
     compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
     compile group: 'joda-time', name: 'joda-time', version: '2.10'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
 }
 
 apply plugin: 'javafx-gradle-plugin'
