--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
     compile group: 'joda-time', name: 'joda-time', version: '2.10'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
+    compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.9.1'
+    compile files('src/main/resources/stanford-english-corenlp-2018-02-27-models.jar')
+
 }
 
 apply plugin: 'javafx-gradle-plugin'
