--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Compiled class file
 *.class
 
+!src/main/resources/stanford-english-corenlp-2018-02-27-models.jar
+
 # Log file
 *.log
 
@@ -18,6 +20,7 @@
 *.zip
 *.tar.gz
 *.rar
+
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
