--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile group: 'joda-time', name: 'joda-time', version: '2.10'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.7.2'
     compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.9.1'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile files('src/main/resources/stanford-english-corenlp-2018-02-27-models.jar')
 
 }
