--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,5 @@
-log4j.rootLogger=INFO, console, file
+log4j.rootLogger=DEBUG, console, file
+log4j.logger.org.apache=FATAL
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
